--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,14 @@
 	<string name="DialogChooseWinner">And the winning one is:</string>
 	<string name="top">Top</string>
 	<string name="bottom">Bottom</string>
+	<string name="DialogActionDescription">The other photo will be removed from the list. You can also erase the photo entirely.</string>
+	<string name="DialogActionUpload">Let the world see the photo too</string>
+	<string name="delete">Delete</string>
+	<string name="proceed">Proceed</string>
 
 	<string name="EventDeleted">The other photo was deleted</string>
 
+	<string name="FlickrSetUp">Log in to your Flickr and allow Phozr upload your photos please</string>
 	<string name="FlickrSetUpSuccess">Flickr have been successfully set up.</string>
 	<string name="FlickrSetUpFailed">Flickr haven\'t been set up!</string>
 </resources>
